[project]
name = "comfyui-ic-light"
description = "ComfyUI native nodes for IC-Light"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-IC-Light"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-IC-Light"
Icon = ""
