[project]
name = "comfyui-ic-light"
description = "ComfyUI native nodes for IC-Light"
version = "1.0.5"
license = { text = "Apache License 2.0" }
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-IC-Light"

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-IC-Light"
Icon = ""
